feat: 添加 typeorm 配置文件

--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/typeorm": "^6.3.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "typeorm": "^0.2.22"
   },
   "devDependencies": {
     "@nestjs/testing": "6.1.1",
