--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.3.1",
+    "cors": "^2.8.5",
+    "express-session": "^1.17.0",
     "mysql": "^2.18.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
